--- a/templates/components/navbar.html
+++ b/templates/components/navbar.html
@@ -11,6 +11,8 @@
       <li><a href="#">Technology</a></li>
       <li><a href="#">Sports</a></li>
       <li><a href="#">Entertainment</a></li>
+      <li><a href="https://github.com/Natnael-crypto/news-aggr" target="_blank"
+           class="bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700">View Source</a></li>
     </ul>
     <div class="search-bar">
       <input type="text" placeholder="Search news..." />
